--- a/deploy/charts/cert-manager/Chart.template.yaml
+++ b/deploy/charts/cert-manager/Chart.template.yaml
@@ -16,5 +16,12 @@ sources:
 maintainers:
   - name: cert-manager-maintainers
     email: cert-manager-maintainers@googlegroups.com
+# We don't want alpha and beta releases to show on ArtifactHUB as releases.
+# To prevent pre-releases from appearing, we use the ArtifactHUB-specific:
+#
+#   annotation:
+#     artifacthub.io/prerelease: "true"
+#
+# See https://artifacthub.io/docs/topics/annotations/helm/
 annotations:
   artifacthub.io/prerelease: "{{ .Chart.IsPrerelease }}"
