--- a/deploy/crds/crd-orders.yaml
+++ b/deploy/crds/crd-orders.yaml
@@ -8,7 +8,7 @@ metadata:
     app: '{{ template "cert-manager.name" . }}'
     app.kubernetes.io/name: '{{ template "cert-manager.name" . }}'
     app.kubernetes.io/instance: '{{ .Release.Name }}'
-    # {{- include "labels" . | nindent 4 }}
+    # Generated labels {{- include "labels" . | nindent 4 }}
 spec:
   group: acme.cert-manager.io
   names:
