--- a/deploy/crds/BUILD.bazel
+++ b/deploy/crds/BUILD.bazel
@@ -47,6 +47,8 @@ helm_tmpl(
     release_name = "cert-manager",
     release_namespace = "cert-manager",
     values = {
+        # Set creator to "static", so the Helm chart does
+        # not add Helm-specific labels to the resources.
         "creator": "static",
     },
     visibility = ["//visibility:public"],
@@ -71,6 +73,8 @@ helm_tmpl(
     release_name = "cert-manager",
     release_namespace = "cert-manager",
     values = {
+        # Set creator to "static", so the Helm chart does
+        # not add Helm-specific labels to the resources.
         "creator": "static",
     },
     visibility = ["//visibility:public"],
