--- a/deploy/charts/cert-manager/templates/certmanager-serviceaccount.yaml
+++ b/deploy/charts/cert-manager/templates/certmanager-serviceaccount.yaml
@@ -1,3 +1,4 @@
+{{- if has "certmanager" .Values.components }}
 {{- if .Values.serviceAccount.create -}}
 apiVersion: v1
 kind: ServiceAccount
@@ -18,4 +19,5 @@ metadata:
     app.kubernetes.io/instance: {{ .Release.Name }}
     app.kubernetes.io/component: "controller"
     {{- include "labels" . | nindent 4 }}
+{{- end }}
 {{- end }}
