--- a/deploy/charts/cert-manager/BUILD.bazel
+++ b/deploy/charts/cert-manager/BUILD.bazel
@@ -1,5 +1,3 @@
-package(default_visibility = ["//visibility:public"])
-
 load("@io_k8s_repo_infra//defs:pkg.bzl", "pkg_tar")
 load("//build:helm.bzl", "helm_pkg")
 
@@ -30,6 +28,22 @@ genrule(
     ],
 )
 
+helm_pkg(
+    name = "cert-manager",
+    srcs = [
+        "//deploy/charts/cert-manager/templates:chart-srcs",
+    ],
+    chart_name = "cert-manager",
+    chart_yaml = ":Chart.versioned.yaml",
+    helmignore = ".helmignore",
+    readme_file = ":README.versioned.md",
+    tpl_files = [
+        "//deploy/charts/cert-manager/templates:_helpers.tpl",
+    ],
+    values_yaml = "values.yaml",
+    visibility = ["//visibility:public"],
+)
+
 pkg_tar(
     name = "release-tar",
     srcs = [
@@ -39,18 +53,7 @@ pkg_tar(
     mode = "0644",
     package_dir = "chart",
     strip_prefix = ".",
-)
-
-helm_pkg(
-    name = "cert-manager",
-    srcs = ["//deploy/charts/cert-manager/templates:chart-srcs"],
-    chart_name = "cert-manager",
-    chart_yaml = ":Chart.versioned.yaml",
-    readme_file = ":README.versioned.md",
-    tpl_files = [
-        "//deploy/charts/cert-manager/templates:_helpers.tpl",
-    ],
-    values_yaml = "values.yaml",
+    visibility = ["//visibility:public"],
 )
 
 filegroup(
@@ -67,4 +70,5 @@ filegroup(
         "//deploy/charts/cert-manager/templates:all-srcs",
     ],
     tags = ["automanaged"],
+    visibility = ["//visibility:public"],
 )
