--- a/pkg/issuer/acme/http/BUILD.bazel
+++ b/pkg/issuer/acme/http/BUILD.bazel
@@ -14,11 +14,12 @@ go_library(
         "//pkg/apis/acme/v1:go_default_library",
         "//pkg/apis/certmanager/v1:go_default_library",
         "//pkg/controller:go_default_library",
+        "//pkg/internal/ingress:go_default_library",
         "//pkg/issuer/acme/http/solver:go_default_library",
         "//pkg/logs:go_default_library",
         "//pkg/util:go_default_library",
         "@io_k8s_api//core/v1:go_default_library",
-        "@io_k8s_api//networking/v1beta1:go_default_library",
+        "@io_k8s_api//networking/v1:go_default_library",
         "@io_k8s_apimachinery//pkg/api/errors:go_default_library",
         "@io_k8s_apimachinery//pkg/apis/meta/v1:go_default_library",
         "@io_k8s_apimachinery//pkg/labels:go_default_library",
@@ -26,7 +27,6 @@ go_library(
         "@io_k8s_apimachinery//pkg/util/errors:go_default_library",
         "@io_k8s_apimachinery//pkg/util/intstr:go_default_library",
         "@io_k8s_client_go//listers/core/v1:go_default_library",
-        "@io_k8s_client_go//listers/networking/v1beta1:go_default_library",
         "@io_k8s_utils//net:go_default_library",
         "@io_k8s_utils//pointer:go_default_library",
     ],
@@ -47,13 +47,12 @@ go_test(
         "//pkg/controller/test:go_default_library",
         "//test/unit/gen:go_default_library",
         "@io_k8s_api//core/v1:go_default_library",
-        "@io_k8s_api//networking/v1beta1:go_default_library",
+        "@io_k8s_api//networking/v1:go_default_library",
         "@io_k8s_apimachinery//pkg/api/errors:go_default_library",
         "@io_k8s_apimachinery//pkg/apis/meta/v1:go_default_library",
         "@io_k8s_apimachinery//pkg/labels:go_default_library",
         "@io_k8s_apimachinery//pkg/runtime:go_default_library",
         "@io_k8s_apimachinery//pkg/util/diff:go_default_library",
-        "@io_k8s_apimachinery//pkg/util/intstr:go_default_library",
         "@io_k8s_client_go//testing:go_default_library",
     ],
 )
