add startup api check Job
Signed-off-by: Inteon <42113979+inteon@users.noreply.github.com>

--- a/BUILD.bazel
+++ b/BUILD.bazel
@@ -29,6 +29,7 @@ container_bundle(
         "{STABLE_DOCKER_REGISTRY}/cert-manager-acmesolver:{STABLE_DOCKER_TAG}": "//build:acmesolver.image",
         "{STABLE_DOCKER_REGISTRY}/cert-manager-webhook:{STABLE_DOCKER_TAG}": "//build:webhook.image",
         "{STABLE_DOCKER_REGISTRY}/cert-manager-cainjector:{STABLE_DOCKER_TAG}": "//build:cainjector.image",
+        "{STABLE_DOCKER_REGISTRY}/cert-manager-ctl:{STABLE_DOCKER_TAG}": "//build:ctl.image",
     },
     tags = ["manual"],
 )
