--- a/test/e2e/suite/conformance/BUILD.bazel
+++ b/test/e2e/suite/conformance/BUILD.bazel
@@ -15,6 +15,10 @@ go_library(
         "//test/e2e/suite/conformance/certificates/venafi:go_default_library",
         "//test/e2e/suite/conformance/certificates/venaficloud:go_default_library",
         "//test/e2e/suite/conformance/certificatesigningrequests/acme:go_default_library",
+        "//test/e2e/suite/conformance/certificatesigningrequests/ca:go_default_library",
+        "//test/e2e/suite/conformance/certificatesigningrequests/selfsigned:go_default_library",
+        "//test/e2e/suite/conformance/certificatesigningrequests/vault:go_default_library",
+        "//test/e2e/suite/conformance/certificatesigningrequests/venafi:go_default_library",
         "//test/e2e/suite/conformance/rbac:go_default_library",
     ],
 )
