set correct exit codes when exiting
Signed-off-by: Inteon <42113979+inteon@users.noreply.github.com>

--- a/BUILD.bazel
+++ b/BUILD.bazel
@@ -60,6 +60,7 @@ filegroup(
         "//cmd/cainjector:all-srcs",
         "//cmd/controller:all-srcs",
         "//cmd/ctl:all-srcs",
+        "//cmd/util:all-srcs",
         "//cmd/webhook:all-srcs",
         "//deploy:all-srcs",
         "//devel:all-srcs",
