--- a/cmd/controller/BUILD.bazel
+++ b/cmd/controller/BUILD.bazel
@@ -8,8 +8,8 @@ go_library(
     visibility = ["//visibility:private"],
     deps = [
         "//cmd/controller/app:go_default_library",
+        "//cmd/util:go_default_library",
         "//pkg/logs:go_default_library",
-        "//pkg/util/cmd:go_default_library",
     ],
 )
 
