--- a/cmd/ctl/BUILD.bazel
+++ b/cmd/ctl/BUILD.bazel
@@ -8,8 +8,7 @@ go_library(
     visibility = ["//visibility:private"],
     deps = [
         "//cmd/ctl/cmd:go_default_library",
-        "//pkg/util:go_default_library",
-        "//pkg/util/cmd:go_default_library",
+        "//cmd/util:go_default_library",
     ],
 )
 
