--- a/cmd/webhook/BUILD.bazel
+++ b/cmd/webhook/BUILD.bazel
@@ -7,9 +7,9 @@ go_library(
     importpath = "github.com/jetstack/cert-manager/cmd/webhook",
     visibility = ["//visibility:private"],
     deps = [
+        "//cmd/util:go_default_library",
         "//cmd/webhook/app:go_default_library",
         "//pkg/logs:go_default_library",
-        "//pkg/util/cmd:go_default_library",
     ],
 )
 
