--- a/cmd/controller/app/BUILD.bazel
+++ b/cmd/controller/app/BUILD.bazel
@@ -53,6 +53,7 @@ go_library(
         "@io_k8s_sigs_gateway_api//pkg/client/clientset/versioned/scheme:go_default_library",
         "@io_k8s_sigs_gateway_api//pkg/client/informers/externalversions:go_default_library",
         "@io_k8s_utils//clock:go_default_library",
+        "@org_golang_x_sync//errgroup:go_default_library",
     ],
 )
 
