--- a/deploy/charts/cert-manager/values.yaml
+++ b/deploy/charts/cert-manager/values.yaml
@@ -268,6 +268,9 @@ webhook:
   # Optional additional labels to add to the Webhook Pods
   podLabels: {}
 
+  # Optional additional labels to add to the Webhook Service
+  serviceLabels: {}
+
   image:
     repository: quay.io/jetstack/cert-manager-webhook
     # You can manage a registry with
