--- a/cmd/ctl/pkg/version/BUILD.bazel
+++ b/cmd/ctl/pkg/version/BUILD.bazel
@@ -7,9 +7,11 @@ go_library(
     visibility = ["//visibility:public"],
     deps = [
         "//pkg/util:go_default_library",
+        "//pkg/util/versionchecker:go_default_library",
         "@com_github_spf13_cobra//:go_default_library",
         "@io_k8s_cli_runtime//pkg/genericclioptions:go_default_library",
         "@io_k8s_kubectl//pkg/cmd/util:go_default_library",
+        "@io_k8s_kubectl//pkg/scheme:go_default_library",
         "@io_k8s_sigs_yaml//:go_default_library",
     ],
 )
