--- a/pkg/issuer/acme/http/BUILD.bazel
+++ b/pkg/issuer/acme/http/BUILD.bazel
@@ -4,6 +4,7 @@ go_library(
     name = "go_default_library",
     srcs = [
         "http.go",
+        "httproute.go",
         "ingress.go",
         "pod.go",
         "service.go",
@@ -27,6 +28,9 @@ go_library(
         "@io_k8s_apimachinery//pkg/util/errors:go_default_library",
         "@io_k8s_apimachinery//pkg/util/intstr:go_default_library",
         "@io_k8s_client_go//listers/core/v1:go_default_library",
+        "@io_k8s_client_go//util/retry:go_default_library",
+        "@io_k8s_sigs_gateway_api//apis/v1alpha1:go_default_library",
+        "@io_k8s_sigs_gateway_api//pkg/client/listers/apis/v1alpha1:go_default_library",
         "@io_k8s_utils//net:go_default_library",
         "@io_k8s_utils//pointer:go_default_library",
     ],
