Add HAProxy to addons
HAProxy is the most minimal implementation of the Gateway API - can be used in e2e tests

Signed-off-by: Jake Sanders <i@am.so-aweso.me>

--- a/devel/addon/bind/manifests/configmap.yaml
+++ b/devel/addon/bind/manifests/configmap.yaml
@@ -36,7 +36,9 @@ data:
     			 604800 )	; Negative Cache TTL
     @	IN	NS	localhost.
     *.ingress-nginx	IN  A {SERVICE_IP_PREFIX}.15
-    ingress-nginx	IN	A	{SERVICE_IP_PREFIX}.15
+    ingress-nginx	IN	A {SERVICE_IP_PREFIX}.15
+    *.haproxy IN  A {SERVICE_IP_PREFIX}.14
+    haproxy IN  A {SERVICE_IP_PREFIX}.14
 
   db.dns01.example.com: |
     ;
