--- a/devel/BUILD.bazel
+++ b/devel/BUILD.bazel
@@ -12,6 +12,7 @@ filegroup(
         "//devel/addon/bind:all-srcs",
         "//devel/addon/certmanager:all-srcs",
         "//devel/addon/gatewayapi:all-srcs",
+        "//devel/addon/haproxy:all-srcs",
         "//devel/addon/ingressnginx:all-srcs",
         "//devel/addon/kyverno:all-srcs",
         "//devel/addon/pebble:all-srcs",
