don't early-stop, instead return all versions
Signed-off-by: Inteon <42113979+inteon@users.noreply.github.com>

--- a/pkg/util/versionchecker/BUILD.bazel
+++ b/pkg/util/versionchecker/BUILD.bazel
@@ -44,22 +44,17 @@ go_library(
         "fromcrd.go",
         "fromlabels.go",
         "fromservice.go",
-        "getpodfromtemplate.go",
         "versionchecker.go",
     ],
     importpath = "github.com/jetstack/cert-manager/pkg/util/versionchecker",
     visibility = ["//visibility:public"],
     deps = [
-        "//pkg/util:go_default_library",
         "@com_github_pkg_errors//:go_default_library",
         "@io_k8s_api//core/v1:go_default_library",
         "@io_k8s_api//rbac/v1:go_default_library",
         "@io_k8s_apiextensions_apiserver//pkg/apis/apiextensions/v1:go_default_library",
         "@io_k8s_apiextensions_apiserver//pkg/apis/apiextensions/v1beta1:go_default_library",
         "@io_k8s_apimachinery//pkg/api/errors:go_default_library",
-        "@io_k8s_apimachinery//pkg/api/meta:go_default_library",
-        "@io_k8s_apimachinery//pkg/api/validation:go_default_library",
-        "@io_k8s_apimachinery//pkg/apis/meta/v1:go_default_library",
         "@io_k8s_apimachinery//pkg/labels:go_default_library",
         "@io_k8s_apimachinery//pkg/runtime:go_default_library",
         "@io_k8s_client_go//rest:go_default_library",
@@ -69,16 +64,24 @@ go_library(
 
 go_test(
     name = "go_default_test",
-    srcs = ["versionchecker_test.go"],
+    srcs = [
+        "getpodfromtemplate_test.go",
+        "versionchecker_test.go",
+    ],
     embed = [":go_default_library"],
     embedsrcs = ["test_manifests.tar"],
     deps = [
+        "//pkg/util:go_default_library",
         "@io_k8s_api//apps/v1:go_default_library",
         "@io_k8s_api//core/v1:go_default_library",
         "@io_k8s_api//rbac/v1:go_default_library",
         "@io_k8s_apiextensions_apiserver//pkg/apis/apiextensions/v1:go_default_library",
         "@io_k8s_apiextensions_apiserver//pkg/apis/apiextensions/v1beta1:go_default_library",
+        "@io_k8s_apimachinery//pkg/api/meta:go_default_library",
+        "@io_k8s_apimachinery//pkg/api/validation:go_default_library",
+        "@io_k8s_apimachinery//pkg/apis/meta/v1:go_default_library",
         "@io_k8s_apimachinery//pkg/apis/meta/v1/unstructured:go_default_library",
+        "@io_k8s_apimachinery//pkg/labels:go_default_library",
         "@io_k8s_apimachinery//pkg/runtime:go_default_library",
         "@io_k8s_cli_runtime//pkg/resource:go_default_library",
         "@io_k8s_client_go//kubernetes/scheme:go_default_library",
